--- a/sites/scholar/modules/scholar_modules/cp/theme/cp-toolbar.css
+++ b/sites/scholar/modules/scholar_modules/cp/theme/cp-toolbar.css
@@ -1,33 +1,33 @@
-#scholarcp-toolbar-toolbar {
+#cp-toolbar-toolbar {
   float: left;
   margin-left: 10px;
   }
 
-#scholarcp-toolbar-user  {
+#cp-toolbar-user  {
   float: right;
   margin-right: 10px;
   }
 
-#scholarcp-top-admin-menus li {
+#cp-top-admin-menus li {
   height: 32px;
   margin-top: 6px;
   }
 
-#scholarcp-toolbar-toolbar li {
+#cp-toolbar-toolbar li {
   float: left;
   margin-right: 18px;
   }
 
-#scholarcp-toolbar-toolbar li.active-trail {
+#cp-toolbar-toolbar li.active-trail {
   background: url(images/topmenu-active.png) no-repeat transparent 8px 100%;
   }
  
-#scholarcp-toolbar-user li {
+#cp-toolbar-user li {
   float: right;
   margin-left: 18px;
   } 
 
-#scholarcp-toolbar-toolbar li a {
+#cp-toolbar-toolbar li a {
   padding-left: 27px;
   background-repeat: no-repeat;
   background-color: transparent;
@@ -39,26 +39,26 @@
   height: 24px;
   }
 
-a#admin-link-scholarcp-content {
+a#admin-link-cp-content {
   background-image: url(images/topmenu-content.png);
   }
   
-a#admin-link-scholarcp-news {
+a#admin-link-cp-news {
   background-image: url(images/topmenu-news.png);
   } 
   
-a#admin-link-scholarcp-settings {
+a#admin-link-cp-settings {
   background-image: url(images/topmenu-settings.png);
   }
   
-a#admin-link-scholarcp-users {
+a#admin-link-cp-users {
   background-image: url(images/topmenu-users.png);
   } 
-a#admin-link-scholarcp-support {
+a#admin-link-cp-support {
   background-image: url(images/topmenu-support.png);
   }
   
-#scholarcp-toolbar-user li a {
+#cp-toolbar-user li a {
   font-size: 12px;
   color: #ddd;
   }
