--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -136,3 +136,33 @@ body.header-left #header-left, body.header-right #header-right {
     width: 100%;
     margin: 0;
     }
+    
+/* Delete, Edit buttons */
+
+ul.admin {
+  background: #fff;
+  line-height: 12px !important;
+  font-size: 10px !important;
+  font-family: "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
+  margin: 0 !important;
+  padding: 0 1px 0 0 !important;
+  }
+
+ul.admin li {
+  margin: 0 !important;
+  }
+
+ul.admin li a, ul.admin li a:visited {
+  color:#ff0000 !important;
+  text-decoration: underline;
+  padding: 2px !important;
+  }
+
+a.delete {
+  background: url(images/delete.png) no-repeat;
+  height: 11px;
+  width: 10px;
+  display: block;
+  text-indent: -999em;
+  }
+  
