--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -1,5 +1,6 @@
 body {
   color:#5a5959;
+  font-size: .8em;
   }
 
 body, #top, #footer {
@@ -111,7 +112,7 @@ input#edit-submit {
   float:right;
   margin-right: 60px;
   }
-  
+ 
   
   
   
