--- a/sites/scholar/modules/scholar_modules/scholarvocab/theme/scholarvocab.css
+++ b/sites/scholar/modules/scholar_modules/scholarvocab/theme/scholarvocab.css
@@ -1,23 +1,55 @@
 .block-scholarvocab {
   clear: both;
-  border-bottom: 1px solid #939393;
-  padding-bottom: 2em;
-  margin-bottom: 2em;
+  border-top: 1px solid #939393;
+  padding-top: 2em;
+  padding-bottom: 1em;
+  margin-top: 2em;
+  width:550px;
+  }
+  
+#block-scholarvocab-scholarvocab0 {
+  border: none;
+  padding-top: 0;
+  margin-top: 0;
   }
 
 .block-scholarvocab h3 {
-  font-size: .9em;
+  font-size: 1.1em;
   float: left;
+  width: 250px;
+  text-align:right;
   }
   
 .block-scholarvocab .item-list {
-  float: left;
+  float: right;
+  width:280px;
+  padding-bottom: 2em;
   }
   
 .block-scholarvocab .item-list ul li {
   list-style: none;
+  position: relative;
+  margin-bottom: 6px;
+  margin-left: 0;
+  padding-left: 1.5em;
   }
   
 .block-scholarvocab .item-list ul li a {
   color: #5a5959;
+  }
+  
+.block-scholarvocab ul.admin {
+  position: absolute;
+  left: -999em;
+  top: 0;
+  }
+  
+.block-scholarvocab ul.admin li {
+  float:left;
+  margin-bottom: 0;
+  padding-left: 3px;
+  }
+
+.block-scholarvocab .item-list ul li:hover ul {
+  left: -27px;
   }
