--- a/sites/scholar/modules/scholar_modules/cp/modules/scholarmenu/theme/scholarmenu.css
+++ b/sites/scholar/modules/scholar_modules/cp/modules/scholarmenu/theme/scholarmenu.css
@@ -6,12 +6,19 @@
   text-align: center;
   }
   
+ 
 #menu_sort_table td:first-child, #menu_sort_table th:first-child {
   text-align: left;
   font-weight: bold;
-  font-size: 1.1em;
+  font-size:1.3em;
   }
-  
+
+
 #menu_sort_table th:first-child {
   padding-left: 24px;
+  }
+  
+  
+#menu_sort_table th {
+  font-size:1.3em;
   }
