features table, etc

--- a/sites/all/themes/scholar_base/tables.css
+++ b/sites/all/themes/scholar_base/tables.css
@@ -15,15 +15,16 @@ th, td {
 	padding: .6em;
 	vertical-align: top;
 	color:#4a4a4a;
+	
 	}
 	
 td:first-child {
-  text-align: center;
+  text-align: left;
   }
 	
 th {
   font-weight: bold;
-  font-size: 1.2em;
+  font-size: 1.1em;
   }
 
 tbody, tbody th {
