fixed body.no-sidebars #content-wrapper

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -69,6 +69,11 @@ a, a:visited {
     padding-left: 220px;
     padding-right: 240px;
     }
+    
+
+body.no-sidebars #content-wrapper {
+  padding: 0;
+  }
 
 .column {
     float: left;
