fixes to vertical tabs

--- a/sites/all/themes/scholar_base/vertical_tabs.css
+++ b/sites/all/themes/scholar_base/vertical_tabs.css
@@ -3,6 +3,7 @@
 .vertical-tabs {
   margin: 1em 0 1em 15em;
   border: 1px solid #ccc;
+  background:#F3F3F3;
 }
 .vertical-tabs-list {
   width: 15em;
