theme picker fixes

--- a/sites/scholar/modules/scholar_modules/cp/theme/cp-theme-picker.css
+++ b/sites/scholar/modules/scholar_modules/cp/theme/cp-theme-picker.css
@@ -48,7 +48,7 @@ ul.theme-picker li.checked h3 {
   color: #4a4a4a;
   font-size: 1.1em;
   height: 43px;
-  padding-top: 1px;
+  padding-top: 1px !important;
   padding-left: 30px;
   }
 
