fixes for registration form

--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -11,19 +11,19 @@ fieldset {
 	border: 1px solid #dedede;
 	*/
 	}
-	
+
 .fieldset-wrapper {
 	padding: 4px;
 	margin-bottom: 1.5em;
 	margin-left: 190px;
 	margin-top: -1.5em;
 	}
-	
+
 
 .fieldset-wrapper .fieldset-wrapper {
 	margin: 0;
 	}
-	
+
 .form-item {
 	margin: auto;
   }
@@ -33,26 +33,27 @@ label, .description {
 	font-weight: bold;
 	color:#333;
 	font-size: 1.1em;
-	}	
+	}
 
 .description {
 	color:#7c8e8e;
 	margin-top: 3px;
 	font-weight: normal;
+	line-height: 127%;
 	}
-	
+
 legend {
 	font-weight: bold;
 	color:#425e69;
 	font-size: 1.2em;
 	}
-	
 
-	
+
+
 label.option {
 	color: #666;
 	}
-	
+
 input.form-text {
 	padding: 4px 3px 2px;
 	margin-top: -2px;
