added live button to registration form

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -104,6 +104,12 @@ li#get-form {
   text-indent: -999em;
   }
 
+li#get-form a {
+  display: block;
+  width: 169px;
+  height: 42px;
+  }
+
 
 /* Content Area */
 
