--- a/sites/scholar/modules/scholar_modules/scholarregister/theme/scholarregister.css
+++ b/sites/scholar/modules/scholar_modules/scholarregister/theme/scholarregister.css
@@ -64,6 +64,8 @@ body.page-site-register h2.title {
   color:#9f9e9e;
   font-weight: normal;
   font-size: 30px;
+  margin-top: 17px;
+  margin-right: 10px;
   }
 
 body.page-site-register #user_register, body.page-site-register #domain-field {
