fix for text fields

--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -55,8 +55,8 @@ label.option {
 	}
 
 input.form-text {
-	padding: 4px 3px 2px;
-	margin-top: -2px;
+	padding: 4px 3px 2px 3px;
+	margin: -3px;
 	border-width: 2px;
 	-moz-border-top-colors: #f9f9f9 #707070;
 	-moz-border-left-colors: #f9f9f9 #ABABAB;
