--- a/sites/scholar/modules/scholar_modules/scholarregister/theme/scholarregister.css
+++ b/sites/scholar/modules/scholar_modules/scholarregister/theme/scholarregister.css
@@ -105,3 +105,14 @@ body.page-site-register .error {
   padding: 0;
   border: none;
   }
+
+body.page-site-register {
+  margin-top: 13px;
+  }
+
+body.page-site-register #success-message p {
+  margin-top: 13px;
+  margin-bottom: 0;
+  font-size: 16px;
+  color:#7e7e7e;
+  }
