fixes to theme 05

--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -1,9 +1,9 @@
 body {
     background: url(images/body-bg-no-sidebar.jpg) 50% 135px repeat-y #6d2a01;
     color:#666;
-    font:.9em/165% "Times New Roman", Times, Georgia, serif; 
+    font:.9em/165% "Times New Roman", Times, Georgia, serif;
     }
-    
+
 body.sidebar-left {
     background-image: url(images/body-bg-left-sidebar.jpg);
     }
@@ -30,8 +30,9 @@ body.two-sidebars {
 #container {
     width: 960px;
     margin: 0 auto;
+    padding-bottom: 200px;
     }
-    
+
 a, a:visited {
     color:#af4917;
     text-decoration: underline;
@@ -47,7 +48,7 @@ h1, h2, h3, #sidebar-right a, #sidebar-left a {
     color:#870202;
     text-decoration: none;
     }
-    
+
 #block-menu-primary-links {
     text-transform: uppercase;
     }
@@ -62,27 +63,44 @@ h1, h2, h3, #sidebar-right a, #sidebar-left a {
 #sidebar-left, #header-left, #sidebar-right, #header-right {
     width: 131px;
     }
-    
+
 #sidebar-left, #header-left {
     right: 228px;
     text-align:right;
     }
-    
+
+#header-left {
+  right: 357px;
+  }
+
 #sidebar-right, #header-right {
     width: 154px;
     }
-    
-#content-wrapper, #header-wrapper {
-    padding-left: 184px;
-    padding-right: 257px;
+
+#content-main {
+  padding:0;
+  }
+
+#header-wrapper {
+    padding-left: 200px;
+    padding-right: 363px;
     }
- 
+
+#content-wrapper {
+    width: auto;
+    margin: 0 auto;
+    padding-left: 185px;
+    padding-right: 258px;
+    }
 
 body.header-main #sidebar-left, body.header-main-right #sidebar-left {
     position:relative;
     top: -83px;
     }
-    
+
+body.navbar #content-main {
+  margin-top: 30px;
+  }
 
 
 /* HEADER ELEMENTS */
@@ -90,34 +108,38 @@ body.header-main #sidebar-left, body.header-main-right #sidebar-left {
 
 
 #header {
-    height: 135px;
+    padding-top: 41px;
+    height: 94px;
     background:url(images/header-no-sidebar.jpg) no-repeat top center #6d2a01;
     }
-   
-        
+
+
 #header-main {
     background: url(images/crest.png) no-repeat transparent;
     padding-left: 133px !important;
     }
- 
+
+#header-right {
+    text-align: center;
+    }
+
 body.header-main #header-main {
     margin-left:212px;
     width:384px;
     margin-top: 43px;
     }
- 
+
 body.sidebar-left #header {
     background-image:url(images/header-left-sidebar.jpg);
     }
 
 body.sidebar-right #header {
     background-image:url(images/header-right-sidebar.jpg);
-
     }
-    
+
 body.two-sidebars #header {
     background-image:url(images/header-both-sidebar.jpg);
-    }    
+    }
 
 #header h1 {
     font-size: 2.5em;
@@ -127,17 +149,42 @@ body.two-sidebars #header {
 #header h1, #header h2, #header h3, #header a, #header a:visited, #header h1 a, #header h1 a:visited, #header {
     color:#414040;
     }
-    
+
 #header h1 a, #header h1 a:visited {
     text-decoration: none;
     padding: 0;
     }
-    
+
 #header h2 {
-    font-size: 1.5em;
+    font-size: 1.2em;
     line-height: 1em;
     }
-    
+
 #header a, #header a:visited {
     text-decoration: none;
     }
+
+#navbar {
+  width: 900px;
+  margin-left: 5px;
+  }
+
+#navbar li {
+  font-weight: bold;
+  margin-right: 15px;
+  font-style: italic;
+  font-family: georgia, serif;
+  }
+
+body.sidebar-left #navbar, body.two-sidebars #navbar {
+  padding-left: 206px;
+  width: 714px;
+  }
+
+body.two-sidebars #navbar {
+  width: 523px;
+  }
+
+#logo img {
+  width: 100px;
+  }
