--- a/sites/scholar/modules/scholar_modules/jquerylink/theme/jquerylink.css
+++ b/sites/scholar/modules/scholar_modules/jquerylink/theme/jquerylink.css
@@ -3,6 +3,10 @@ a.submit-link {
   background: url(images/buttons-sprite.png) no-repeat 100% -112px;
   padding-right: 16px;
   display:inline-block;
+  font-size: 13px !important;
+  line-height: normal !important;
+  font-weight: normal !important;
+  margin-left: 2px;
   }
 
 a.submit-link span.button-inner {
