--- a/sites/scholar/modules/scholar_modules/scholarregister/theme/scholarregister.css
+++ b/sites/scholar/modules/scholar_modules/scholarregister/theme/scholarregister.css
@@ -90,7 +90,7 @@ body.page-site-register #user_register, body.page-site-register #domain-field {
   right: 0;
   }
 
-body.page-site-register #edit-submit {
+body.page-site-register #edit-submit, body.page-site-register a.submit-link {
   float: right;
   margin-top: 30px;
   }
