--- a/sites/all/themes/scholar_theme_07/scholar-theme-07.css
+++ b/sites/all/themes/scholar_theme_07/scholar-theme-07.css
@@ -1,38 +1,32 @@
-html {
-    min-width: 910px;
-    }
-
 body {
-    background: url(images/body-bg.png) repeat-x 0 100px #4E320A;
+    background: url(images/fabric-strip.jpg) repeat-y top center #4E320A;
     color:#282828;
-    font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif; 
+    font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
-
 
 body.admin-menu {
-    background-position: 0 120px;
-    }
-   
+  background-position: 50% 20px;
+  }
+
 #wrapper {
-    width: 910px;
-    background: url(images/fabric-strip.png) repeat-y transparent; 
-    margin: 0 auto;
+    width: 100%;
+    background: url(images/menu-strip.png) repeat-x 0 100px transparent;
     }
-    
+
 body.front #wrapper {
     background: transparent;
     }
-     
+
 #container {
-    width: 748;
-    margin-left: 162px;
+    width: 923px;
+    margin: 0 auto;
     }
 
 body.front #container {
     width: 100%;
     margin-left: 0;
     }
-    
+
 a, a:visited {
     color:#353535;
     text-decoration: underline;
@@ -54,16 +48,35 @@ h1 a, h2 a, h3 a, #sidebar-right a {
 
 /* LAYOUT ELEMENTS */
 
-#sidebar-left, #header-left {
-    width: 178px;
-    right: 199px;
-    padding: 0 1px;
+#sidebar-left {
+   width: 168px;
+   right: 198px;
     }
 
-#content-wrapper, #header-wrapper {
-    padding-left: 189px;
-    }
-    
+#header-left, #header-right {
+  width: 100px;
+  right: 120px;
+  padding: 0;
+  }
+
+#header-right {
+  right: auto;
+  }
+
+#content-wrapper {
+  padding-left: 188px;
+  padding-right: 220px;
+  }
+
+#content-main {
+  width: auto;
+  }
+
+#header-wrapper {
+  padding-right: 120px;
+  padding-left: 100px;
+  }
+
 #sidebar-right {
     border-left: 1px solid #ccc;
     }
@@ -79,8 +92,20 @@ h1 a, h2 a, h3 a, #sidebar-right a {
 #header {
     height: 141px;
     font-family: georgia, serif;
-    margin-left: 10px;
+    background: url(images/header.jpg) no-repeat 0 0 #4E320A;
+    width: 100%;
     }
+
+#header-wrapper, #content-wrapper, #navbar {
+  margin-left: 193px;
+  margin-right: 34px;
+  }
+
+#header-wrapper {
+  height: 114px;
+  overflow: auto;
+  }
+
 
 #header h1 {
     font-size: 2.5em;
@@ -100,66 +125,43 @@ h1 a, h2 a, h3 a, #sidebar-right a {
     text-decoration: none;
     border: none;
     }
-    
+
 #header h2 {
     font-size: 1.3em;
     line-height: 1em;
     }
-   
+
 #header p {
     margin-bottom: 0;
     }
-    
+
+#logo img {
+  width: 80px;
+  }
+
 #navbar {
     height: 32px;
     }
 
-        
+
 #navbar li {
-    margin-right: 1.5em;
     font-size: 1.1em;
     line-height: normal;
     font-family:"Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     float:left;
-    margin-top:9px;
     }
 
 #navbar li a, #navbar li a:visited {
     color: #523507;
     border: none;
     display: block;
-    padding: 7px 4px;
+    padding: 3px 7px 7px 7px;
     font-weight: bold;
     }
-    
+
 #navbar li a:hover {
     color:#fff;
     background: #b8690c;
     }
-    
-    
-/* MAIN CONTENT AREA */
-
-#content-wrapper {
-    background:url(images/content-wrapper.png) repeat-y #faf4e5;
-    }
-    
-#content-wrapper-bottom {
-    clear: both;
-    }
 
 
-body.sidebar-left #content {
-    margin-left: 30px;
-    }
-
-body.sidebar-right #content {
-    margin-right: 30px;
-    }    
-    
-    
-body.two-sidebars #content {
-    margin-left: 20px;
-    margin-right: 20px;
-    }    
-    
