--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -229,3 +229,34 @@ li#get-form a {
   font-weight: normal;
   line-height: 1.3em;
   }
+
+
+/* Different Tables for admin use */
+
+table {
+  font-size: .8em;
+  }
+
+table th {
+  font-size: .8em;
+  text-transform: uppercase;
+  background-color: #eee;
+  border: 1px solid #ddd;
+  padding: 5px;
+  }
+
+tr.even, tr.odd {
+  border-bottom: 1px solid #ccc;
+  padding: .1em .6em;
+  }
+
+tr.even {
+  background-color: #eee;
+  }
+
+td, td.description {
+  border: 1px solid #ddd;
+  padding: 5px;
+  color: #222;
+  font-size: .9em;
+  }
