refactored scholarregister module

--- a/sites/scholar/modules/scholar_modules/scholarregister/theme/scholarregister.css
+++ b/sites/scholar/modules/scholar_modules/scholarregister/theme/scholarregister.css
@@ -73,14 +73,14 @@ body.page-site-register #user_register, body.page-site-register #domain-field {
   padding-top: 50px;
   }
 
-#scholarregister-signup-form #username-field, #scholarregister-signup-form #email-field {
+#scholarregister-signup-form #name-field, #scholarregister-signup-form #mail-field {
   width: 324px;
   float:left;
   margin: 0;
   position: relative;
   }
 
-#scholarregister-signup-form #email-field {
+#scholarregister-signup-form #mail-field {
   float: right;
   }
 
