small changes in vocab css

--- a/sites/scholar/modules/scholar_modules/scholarvocab/theme/scholarvocab.css
+++ b/sites/scholar/modules/scholar_modules/scholarvocab/theme/scholarvocab.css
@@ -17,7 +17,7 @@
   font-size: 1.1em;
   float: left;
   width: 250px;
-  text-align:right;
+  text-align: left;
   }
   
 .block-scholarvocab .item-list {
@@ -39,8 +39,8 @@
   }
   
 .block-scholarvocab ul.admin {
-  position: absolute;
-  left: -999em;
+  position: relative;
+  float: right;
   top: 0;
   }
   
@@ -50,6 +50,6 @@
   padding-left: 3px;
   }
 
-.block-scholarvocab .item-list ul li:hover ul {
+.block-scholarvocab .item-list ul li ul {
   left: -27px;
   }
