--- a/sites/scholar/modules/vsite/modules/vsite_vocab/theme/vsite_vocab.css
+++ b/sites/scholar/modules/vsite/modules/vsite_vocab/theme/vsite_vocab.css
@@ -1,4 +1,4 @@
-.block-scholarvocab {
+.block-vsite-vocab {
   clear: both;
   border-top: 1px solid #939393;
   padding-top: 2em;
@@ -7,26 +7,26 @@
   width:550px;
   }
   
-#block-scholarvocab-scholarvocab0 {
+#block-vsite-vocab-vsite-vocab0 {
   border: none;
   padding-top: 0;
   margin-top: 0;
   }
 
-.block-scholarvocab h3 {
+.block-vsite-vocab h3 {
   font-size: 1.1em;
   float: left;
   width: 250px;
   text-align: left;
   }
   
-.block-scholarvocab .item-list {
+.block-vsite-vocab .item-list {
   float: right;
   width:280px;
   padding-bottom: 2em;
   }
   
-.block-scholarvocab .item-list ul li {
+.block-vsite-vocab .item-list ul li {
   list-style: none;
   position: relative;
   margin-bottom: 6px;
@@ -34,22 +34,22 @@
   padding-left: 1.5em;
   }
   
-.block-scholarvocab .item-list ul li a {
+.block-vsite-vocab .item-list ul li a {
   color: #5a5959;
   }
   
-.block-scholarvocab ul.admin {
+.block-vsite-vocab ul.admin {
   position: relative;
   float: right;
   top: 0;
   }
   
-.block-scholarvocab ul.admin li {
+.block-vsite-vocab ul.admin li {
   float:left;
   margin-bottom: 0;
   padding-left: 3px;
   }
 
-.block-scholarvocab .item-list ul li ul {
+.block-vsite-vocab .item-list ul li ul {
   left: -27px;
   }
