add example img

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -153,9 +153,33 @@ input#edit-submit {
   border: none;
   }
   
-  
+/**
+ * BEGIN SITE INFO 
+ * 
+ * Shaun  below is the style for the site info form, it could use a little attention I just threw some floats in on the form elements
+ */  
+#edit-settings-site-scholar-link-to-home-wrapper,
+#edit-settings-site-scholar-link-to-contact-wrapper,
+#edit-settings-site-scholar-headline-wrapper,
+#edit-settings-site-scholar-sub-heading-extra-wrapper{
+  float: left;
+}
+
+#edit-settings-site-scholar-link-to-contact-wrapper,
+#edit-settings-site-scholar-link-to-home-wrapper{
+  height: 20px;
+  margin:  15px 0px 0px 10px;
+  clear: right;
+}
+
+#edit-settings-site-scholar-sub-heading-extra-wrapper,
+#edit-settings-site-sub-heading-wrapper {
+  clear: left;
+}
   
  
- 
+ /**
+  * END Site INFO
+  */
  
   
