move features on the top menu + taxonomy under content + hide <any> options in view exposed fileter + fixed vsite_content view

--- a/sites/scholar/modules/scholar_modules/cp/theme/cp-toolbar.css
+++ b/sites/scholar/modules/scholar_modules/cp/theme/cp-toolbar.css
@@ -39,6 +39,10 @@
   height: 24px;
   }
 
+a#admin-link-cp-features {
+  background-image: url(images/topmenu-settings.png);
+  }
+  
 a#admin-link-cp-content {
   background-image: url(images/topmenu-content.png);
   }
@@ -62,3 +66,7 @@ a#admin-link-cp-support {
   font-size: 12px;
   color: #ddd;
   }
+  
+#admin-link-cp-content-taxonomy{
+  margin-top : 30px;
+}
