upgrading og to 6--2-0

--- a/sites/all/modules/contrib/og/theme/og.css
+++ b/sites/all/modules/contrib/og/theme/og.css
@@ -41,9 +41,7 @@
 	text-indent: -1em;
 }
 
-
-/*TODOL: Line not hidden*/
-.view-id-og_members_faces tr.row-first td, .view-id-og_members_block ul li:first {
+.view-id-og_members_faces tr.row-first td, .view-id-og_members_block ul li:first-child {
   border-top: none;
 }
 
