fixes for theme picker

--- a/sites/all/modules/vsite/modules/vsite_design/theme/vsite_design_theme_picker.css
+++ b/sites/all/modules/vsite/modules/vsite_design/theme/vsite_design_theme_picker.css
@@ -17,6 +17,10 @@ ul.theme-picker li img {
   margin-top: 2px;
   }
 
+ul.theme-picker li p {
+  fon
+  }
+
 ul.theme-picker li.checked img {
   border: 3px solid red;
   margin-top: 0;
@@ -33,9 +37,10 @@ ul.theme-picker li.checked img {
   background-image: url(images/prev.png);
   }
 
-.theme-picker h3 {
+.theme-picker h3, ul.theme-picker li p {
   margin-top: 2px;
   font-size: .9em;
+  margin-bottom: 0;
   }
 
 ul.theme-picker li.checked h3 {
