removing margins from .pad and adding to form only

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -12,7 +12,7 @@ body#tinymce {
 	background: #fff;
 	font-size: 1em;
 	}
-	
+
 #container {
 	margin: 0;
 	width: 100%;
@@ -30,7 +30,7 @@ body#tinymce {
 	width: 100%;
 	overflow: hidden;
 	}
-	
+
 #main-content, #main, #cp-content {
 	background: #fff;
 	float: none;
@@ -60,7 +60,7 @@ body#tinymce {
   background:#f2f3f3;
   border-right: 1px solid #bfc6c6;
   }
-      
+
 #cp-content {
   left: 201px;
   width: auto;
@@ -78,12 +78,14 @@ body#tinymce {
   width: 100%;
   overflow: hidden;
   }
-	
-#cp-content .innerframe .pad {
+
+#cp-content .innerframe form {
   margin: 30px 0 0 30px;
   }
-  
-  
+
+
+
+
 
 /* First Column */
 
@@ -95,20 +97,20 @@ body#tinymce {
   display:block;
   font-size: 14px;
   }
-  
-  
+
+
 #cp-sidemenu li.active a,
 #cp-sidemenu li.active-trail a {
   background: url(images/cp-sidemenu-active.png) 0 100% repeat-x #b8c0c0;
   color: #000;
   }
-  
-  
-  
-  
+
+
+
+
 /* Forms */
 
-  
+
 /* Get rid of all this once the footer content is in a module */
 
 #footer h3 {
@@ -120,7 +122,7 @@ body#tinymce {
   margin-left: 33px;
   margin-top: 14px;
   }
-  
+
 #footer ul {
   float: right;
   color: #ddd;
@@ -133,7 +135,7 @@ body#tinymce {
   color: #ddd;
   text-decoration: underline;
   }
-  
+
 #footer li {
   display:inline;
   margin-left: 8px;
@@ -141,16 +143,16 @@ body#tinymce {
   padding-right: 8px;
   text-align: right;
   }
- 
+
 #footer li.last {
   border: none;
   }
-  
+
 /**
- * BEGIN SITE INFO 
- * 
+ * BEGIN SITE INFO
+ *
  * Shaun  below is the style for the site info form, it could use a little attention I just threw some floats in on the form elements
- */  
+ */
 #edit-settings-site-scholar-link-to-home-wrapper,
 #edit-settings-site-scholar-link-to-contact-wrapper,
 #edit-settings-site-scholar-headline-wrapper,
@@ -169,10 +171,9 @@ body#tinymce {
 #edit-settings-site-scholar-sub-heading-wrapper  {
   clear: left;
 }
-  
- 
+
+
  /**
   * END Site INFO
   */
- 
-  
+
