--- a/sites/all/modules/vsite/modules/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/modules/vsite_layout/theme/vsite_layout.css
@@ -3,8 +3,9 @@
   height: 625px;
   background: url(images/layout-map.png) no-repeat #fff;
   position: relative;
+  margin-left: 17px;
   }
-  
+
 #scholarlayout-container .scholarlayout-widgets-list {
   position: absolute;
   width: 202px;
@@ -14,7 +15,7 @@
   padding: 0;
   margin: 0;
   }
-  
+
 #scholarlayout-container .scholarlayout-widgets-list:hover {
   background: #c4e5a3;
   }
@@ -25,45 +26,45 @@
   left: 247px;
   }
 
-#scholarlayout-container #scholarlayout-header-right, 
+#scholarlayout-container #scholarlayout-header-right,
 #scholarlayout-container #scholarlayout-right {
   left: 493px;
   }
 
-#scholarlayout-container #scholarlayout-content-main, 
-#scholarlayout-container #scholarlayout-left, 
+#scholarlayout-container #scholarlayout-content-main,
+#scholarlayout-container #scholarlayout-left,
 #scholarlayout-container #scholarlayout-right {
   top: 182px;
   height: 356px;
   }
 
-  
+
 #scholarlayout-container #scholarlayout-navbar,#scholarlayout-container #scholarlayout-footer {
   width: 653px;
   height: 30px;
   top: 150px;
   }
-  
+
  #scholarlayout-container #scholarlayout-footer {
   top: 541px;
   height: 42px;
   left: 43px;
   }
-  
-  
+
+
 #scholarlayout-top-widgets {
   height:130px;
   background:#eaebe9;
   width: 100%;
   }
-  
+
 li.scholarlayout-item {
   font-size: 11px;
   font-weight: bold;
   color:#444545;
   cursor: pointer;
   }
-  
+
 #scholarlayout-top-widgets li.scholarlayout-item {
   float: left;
   width: 118px;
@@ -73,14 +74,14 @@ li.scholarlayout-item {
   padding-top: 91px;
   background:url(images/widget-bg.png) no-repeat transparent 50% 10px;
   }
-  
+
 #scholarlayout-container li.scholarlayout-item {
   margin: 3px;
   padding: 4px 4px 4px 14px;
   border: 1px solid #8a8888;
   background: url(images/scholarlayout-item-placed.png) repeat-x 0 0 #fff;
   }
-  
+
 .scholarlayout-item-settings {
   color:#f60000;
   padding-right: 14px;
@@ -96,7 +97,7 @@ li.scholarlayout-item {
 #scholarlayout-top-widgets .scholarlayout-item-settings,.scholarlayout-item-settings ul {
   display:none;
   }
-  
+
 .scholarlayout-item-settings:hover ul {
   display:block;
   position:absolute;
