fixed input fields for Linux

--- a/sites/all/modules/scholar/modules/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/scholar/modules/scholarregister/theme/scholarregister.css
@@ -116,3 +116,7 @@ body.page-site-register #success-message p {
   font-size: 16px;
   color:#7e7e7e;
   }
+
+#name-field input, #mail-field input {
+  width: 315px;
+  }
