--- a/sites/all/modules/vsite/modules/vsite_vocab/theme/vsite_vocab.css
+++ b/sites/all/modules/vsite/modules/vsite_vocab/theme/vsite_vocab.css
@@ -6,7 +6,7 @@
   margin-top: 2em;
   width:550px;
   }
-  
+
 #block-vsite_vocab-vsite_vocab0 {
   border: none;
   padding-top: 0;
@@ -17,15 +17,15 @@
   font-size: 1.1em;
   float: left;
   width: 250px;
-  text-align: left;
+  text-align: right;
   }
-  
+
 .block-vsite_vocab .item-list {
   float: right;
   width:280px;
   padding-bottom: 2em;
   }
-  
+
 .block-vsite_vocab .item-list ul li {
   list-style: none;
   position: relative;
@@ -33,17 +33,17 @@
   margin-left: 0;
   padding-left: 1.5em;
   }
-  
+
 .block-vsite_vocab .item-list ul li a {
   color: #5a5959;
   }
-  
+
 .block-vsite_vocab ul.admin {
   position: relative;
   float: right;
   top: 0;
   }
-  
+
 .block-vsite_vocab ul.admin li {
   float:left;
   margin-bottom: 0;
