--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -114,6 +114,16 @@ body#tinymce {
   margin: 30px 0 0 30px;
   }
 
+#cp-content div.messages {
+  padding: 10px 30px;
+  }
+
+#cp-content div.error {
+  background: #fcf5a7;
+  border-color: #c5b509;
+  }
+
+
 /* Forms */
 
 
