adding close-this class

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -20,18 +20,18 @@ body {
 #admin-menu, #admin-menu li li.expandable, #admin-menu li li {
   background:#800c0c;
   }
-  
+
 #admin-menu li li:hover {
   background: #984949;
   }
 
-  
+
 /* TYPE STYLES */
 
 p, div.messages {
 	margin-bottom: 1.5em;
 	}
-	
+
 #header p {
   margin: 0;
   }
@@ -40,7 +40,7 @@ ul, li {
 	list-style: none;
 	padding: 0;
 	}
-	
+
 #navbar li, #header-top li, .views-admin-links li, ul.inline li {
     display:inline;
     }
@@ -49,7 +49,7 @@ a, a:visited {
 	text-decoration: none;
 	color: #2d63a6;
 	}
-	
+
 
 /* LAYOUT */
 
@@ -69,22 +69,22 @@ a, a:visited {
     padding-left: 220px;
     padding-right: 240px;
     }
-    
+
 .column {
     float: left;
     position: relative;
     padding: 10px;
     }
-	
+
 #header-left, #header-right, #sidebar-left, #sidebar-right {
 	width: 200px;
 	}
-	
+
 #header-left, #sidebar-left {
 	right: 240px;
 	margin-left: -100%;
 	}
-		
+
 #header-right, #sidebar-right {
 	margin-right: -100%;
 	}
@@ -125,20 +125,20 @@ body.header-left-right #header-left, body.header-left-right #header-right, body.
     width: 50%;
     right: auto;
     }
-    
+
 body.header-left-right #header-left {
     margin:0 -20px 0 0;
     }
-    
+
 body.header-left-right #header-right {
     margin:0 0 0 -20px;
-    }    
-    
+    }
+
 body.header-left #header-left, body.header-right #header-right {
     width: 100%;
     margin: 0;
     }
-    
+
 /* Delete, Edit buttons */
 
 ul.admin {
@@ -167,4 +167,11 @@ a.delete {
   display: block;
   text-indent: -999em;
   }
-  
+
+.close-this {
+  width: 18px;
+  height: 18px;
+  background: url(images/close-icon.png) no-repeat transparent;
+  text-indent: -999em;
+  }
+
