added theming to features button

--- a/sites/all/modules/vsite/modules/cp/theme/cp-toolbar.css
+++ b/sites/all/modules/vsite/modules/cp/theme/cp-toolbar.css
@@ -9,7 +9,7 @@
   }
 
 #cp-top-admin-menus li {
-  height: 32px;
+  height: 36px;
   margin-top: 6px;
   }
 
@@ -28,7 +28,7 @@
   }
 
 #cp-toolbar-toolbar li a {
-  padding-left: 27px;
+  padding-left: 30px;
   background-repeat: no-repeat;
   background-color: transparent;
   font-size: 10px;
@@ -36,11 +36,7 @@
   font-weight: normal;
   color:#ddd;
   display:block;
-  height: 24px;
-  }
-
-a#admin-link-cp-features {
-  background-image: url(images/topmenu-settings.png);
+  height: 28px;
   }
 
 a#admin-link-cp-content {
@@ -60,6 +56,10 @@ a#admin-link-cp-users {
   }
 a#admin-link-cp-support {
   background-image: url(images/topmenu-support.png);
+  }
+
+a#admin-link-cp-features {
+  background-image: url(images/topmenu-features.png);
   }
 
 #cp-toolbar-user li a {
