--- a/sites/all/modules/vsite/modules/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/modules/vsite_layout/theme/vsite_layout.css
@@ -1,9 +1,10 @@
 #scholarlayout-container {
   width: 848px;
-  height: 625px;
-  background: url(images/layout-map.png) no-repeat #fff;
+  height: 711px;
+  background: url(images/layout-map.png) no-repeat #fff 0 0;
   position: relative;
   margin-left: 17px;
+  margin-top: 0;
   }
 
 #scholarlayout-container .scholarlayout-widgets-list {
@@ -132,4 +133,44 @@ li.scholarlayout-item {
 	height: 32px;
 	position: absolute;
 	width: 32px;
+  }
+
+#scholarforms_save_warning {
+  position:absolute;
+  left: 286px;
+  top: 161px;
+  }
+
+#edit-settings-layout-page-type-wrapper  {
+  position: relative;
+  height: 37px;
+  }
+
+#edit-settings-layout-page-type-wrapper label, #edit-settings-layout-page-type-wrapper select {
+  float: left;
+  margin-right: 6px;
+  }
+
+#edit-settings-layout-page-type-wrapper .description {
+  clear: left;
+  position: absolute;
+  top: 21px;
+  }
+
+#cp-content .innerframe #cp-settings-form {
+  margin-top: 10px;
+  }
+
+#cp-settings-form .submit-link {
+  position:absolute;
+  top: 870px;
+  z-index: 10;
+  }
+
+ #cp-settings-form .edit-reset {
+  left: 150px;
+  }
+
+.ahah-progress-throbber {
+  width: 150px;
   }
