some changes to forms throughout

--- a/sites/all/modules/vsite/modules/cp/theme/cp_nice_buttons.css
+++ b/sites/all/modules/vsite/modules/cp/theme/cp_nice_buttons.css
@@ -26,3 +26,16 @@ a.submit-link span.label {
   text-align: center;
   height: 14px;
   }
+
+
+a.edit-reset {
+  background-position: 100% -140px;
+  }
+
+a.edit-reset span.button-inner {
+  background-position: 0 -28px;
+  }
+
+a.edit-reset span.label {
+  background-position: 0 -84px;
+  }
