--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -105,6 +105,10 @@ body.sidebar-right #cp-content {
 
 /* First Column */
 
+#cp-sidemenu li {
+  padding: 0;
+  }
+
 #cp-sidemenu li a, #cp-sidemenu li a:visited {
   color: #626161;
   font-weight: bold;
@@ -138,10 +142,8 @@ body.sidebar-right #cp-content {
   }
 
 
-/* Forms */
 
-
-/* Get rid of all this once the footer content is in a module */
+/* FOOTER Get rid of all this once the footer content is in a module */
 
 #footer h3 {
   float: left;
@@ -177,6 +179,8 @@ body.sidebar-right #cp-content {
 #footer li.last {
   border: none;
   }
+
+
 
 /**
  * BEGIN SITE INFO
