--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -209,3 +209,10 @@ a.delete {
   text-indent: -999em;
   }
 
+a.button {
+  float:right;
+  color: #FF003A;
+  font-style: normal;
+  font-size: 12px;
+  }
+
