--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -1,70 +1,48 @@
 ﻿/* $Id: forms.css,v 1.2 2008/01/06 15:50:31 swortis Exp $ */
 
-fieldset {
-	margin-bottom: 1.5em;
-	border: none;
-	color: #666;
-	font-size: .9em;
-	/*
-	padding: 10px;
-	background: #f3f3f3;
-	border: 1px solid #dedede;
-	*/
-	}
 
-.fieldset-wrapper {
-	padding: 4px;
-	margin-bottom: 1.5em;
-	margin-left: 190px;
-	margin-top: -1.5em;
-	}
-
-
-.fieldset-wrapper .fieldset-wrapper {
-	margin: 0;
-	}
-
-.form-item {
-	margin: auto;
+div.form-item {
+  border:1px solid #CCCCCC;
+  margin:0 0 10px;
+  padding:9px;
   }
 
-label, .description {
-	display:block;
-	font-weight: bold;
-	color:#333;
-	font-size: 1.1em;
-	}
+div.form-item, ul.links, div.admin-panel .body, .clear-block {
+  display:block;
+  }
 
-.description {
-	color:#7c8e8e;
-	margin-top: 3px;
-	font-weight: normal;
-	line-height: 127%;
-	}
+div.fieldset, fieldset, .container-inline-date {
+  background: #f8f8f8;
+  border: 1px solid #ccc;
+  margin: 0 0 10px;
+  padding: 4px 9px;
+  }
 
-legend {
-	font-weight: bold;
-	color:#425e69;
-	font-size: 1.2em;
-	}
+fieldset h2.fieldset-title, div.form-item label {
+  font-size:11px;
+  font-weight:normal;
+  margin:0;
+  padding:0;
+  text-transform:uppercase;
+  }
+
+div.description, div.form-item div.description {
+  color:#666;
+  font-size:11px;
+  line-height:15px;
+  margin:5px 0;
+  }
+
+div.teaser-checkbox div.form-item, div.form-item div.form-item, fieldset div.form-item, .container-inline-date div.form-item {
+  border: none !important;
+  margin:0;
+  padding:5px 0;
+  }
 
 
-
-label.option {
-	color: #666;
-	}
-
-input.form-text {
-	padding: 4px 3px 2px 3px;
-	margin: -3px;
-	border-width: 2px;
-	-moz-border-top-colors: #f9f9f9 #707070;
-	-moz-border-left-colors: #f9f9f9 #ABABAB;
-	-moz-border-right-colors: #f9f9f9 #ABABAB;
-	-moz-border-bottom-colors: #f9f9f9 #CECECE;
-	}
 
 .admin {
 	padding-top: 1.5em;
 	clear: both;
 	}
+
