more form tweaks

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -1,7 +1,7 @@
 /* Forms */
 
 
-.fieldset-wrapper {
+.section-cp .fieldset-wrapper {
 	padding: 4px;
 	margin-bottom: 1.5em;
 	margin-left: 190px;
@@ -9,18 +9,18 @@
 	}
 
 
-.fieldset-wrapper .fieldset-wrapper {
+.section-cp .fieldset-wrapper .fieldset-wrapper {
 	margin: 0;
 	}
 
-div.form-item {
+.section-cp div.form-item {
 	margin: auto;
 	border: none;
 	padding: 0;
 	margin: 0;
   }
 
-label, .div.form-item label, .description {
+.section-cp label, .section-cp .div.form-item label, .section-cp .description {
 	display:block;
 	font-weight: bold;
 	color:#333;
@@ -28,29 +28,29 @@ label, .div.form-item label, .description {
 	text-transform:none;
 	}
 
-div.description {
+.section-cp div.description {
 	color:#7c8e8e;
 	margin-top: 3px;
 	font-weight: normal;
 	line-height: 127%;
 	}
 
-legend {
+.section-cp legend {
 	font-weight: bold;
 	color:#425e69;
 	font-size: 1.2em;
 	}
 
-div.fieldset, fieldset, .container-inline-date {
+.section-cp div.fieldset, .section-cp fieldset, .section-cp .container-inline-date {
   background: transparent;
   border: none;
   }
 
-label.option {
+.section-cp label.option {
 	color: #666;
 	}
 
-input.form-text {
+.section-cp input.form-text {
 	padding: 4px 3px 2px 3px;
 	margin: -3px;
 	border-width: 2px;
