--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -94,7 +94,7 @@ body.sidebar-right #cp-content {
   }
 
 #cp-content .innerframe form {
-  margin: 30px 0 0 30px;
+  margin: 30px;
   }
 
 .help {
@@ -141,6 +141,15 @@ body.sidebar-right #cp-content {
   border-color: #c5b509;
   }
 
+
+/* Exposed View Form */
+
+#cp-content .innerframe form#views-exposed-form-vsite-content-default {
+  margin: 0 0 10px 0;
+  padding: 20px;
+  background:#EAEBE9;
+  font-size: .8em;
+  }
 
 
 /* FOOTER Get rid of all this once the footer content is in a module */
