add content button

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -220,3 +220,8 @@ span.buttons a.button {
   float: none;
   margin-left: 6px;
   }
+
+.show-content-type {
+  text-transform: lowercase;
+  font-weight: bold;
+  }
