--- a/sites/all/themes/scholar_base/modal.css
+++ b/sites/all/themes/scholar_base/modal.css
@@ -6,24 +6,21 @@
   background: blue;
   }
 
-#modal-content {
-  border: none;
-  }
 
 div.ctools-modal-content {
-  background: #fff;
   color: #000;
-  padding: 0;
-  margin: 2px;
+  padding: 25px;
+  margin: 0;
   border: none;
-  width: 600px;
   text-align: left;
-}
-
-
-#modalContent {
-  top: 0;
+  background: #fff;
   }
+
+#modal-content {
+  border: none;
+  background: #fff;
+  }
+
 
 
 div.ctools-modal-content .modal-title {
@@ -35,9 +32,9 @@ div.ctools-modal-content .modal-title {
 }
 
 div.ctools-modal-content .modal-header {
-  background-color: #2385c2;
-  padding: 0 .25em 0 1em;
-}
+  background-color: #fff;
+  padding: 0 1em;
+  }
 
 div.ctools-modal-content .modal-header a {
   color: white;
@@ -114,3 +111,35 @@ div.ctools-modal-content .resizable-textarea {
   margin-right: 5em;
 }
 
+
+#modalContent {
+  padding: 0 35px 35px 35px;
+  background: transparent;
+  }
+
+#ctools-left, #ctools-right, #ctools-bottom {
+  position: absolute;
+  }
+
+#ctools-left, #ctools-right, #ctools-bottom {
+  top:0;
+  bottom: 0;
+  left: 0;
+  width: 35px;
+  background: url(images/dropdown-window.png) repeat-x 0 100% transparent;
+  }
+
+#ctools-right {
+  left: auto;
+  right: 0;
+  background-position: 100% 100%;
+  }
+
+#ctools-bottom {
+  width:auto;
+  height: 35px;
+  right: 35px;
+  left: 35px;
+  top: auto;
+  background: url(images/dropdown-window-bot.png) repeat-x 0 100% transparent;
+  }
