--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -1,11 +1,11 @@
 /* Forms */
 
 
-.section-cp .fieldset-wrapper {
+.section-cp .fieldset-wrapper, .section-cp div.spaces-block-customizer,.section-cp div.description  {
 	padding: 4px;
 	margin-bottom: 1.5em;
 	margin-left: 190px;
-	margin-top: -1.5em;
+	margin-top: -28px;
 	}
 
 
@@ -20,7 +20,12 @@
 	margin: 0;
   }
 
-.section-cp label, .section-cp .div.form-item label, .section-cp .description {
+
+.section-cp fieldset table tr {
+  border: none;
+  }
+
+.section-cp label, .section-cp .div.form-item label, .section-cp .description, div.spaces-block-customizer {
 	display:block;
 	font-weight: bold;
 	color:#333;
@@ -29,21 +34,35 @@
 	}
 
 .section-cp div.description {
-	color:#7c8e8e;
-	margin-top: 3px;
+	color:#777;
+  margin-bottom: 3em;
 	font-weight: normal;
 	line-height: 127%;
+	font-size: .9em;
 	}
 
-.section-cp legend {
+.section-cp .fieldset-wrapper div.description, .section-cp table div.description {
+  margin-left: 0;
+  padding: 0;
+  margin-top: 3px;
+  margin-bottom: 3px;
+  }
+
+.section-cp fieldset legend {
 	font-weight: bold;
 	color:#425e69;
 	font-size: 1.2em;
+	float: left;
 	}
 
 .section-cp div.fieldset, .section-cp fieldset, .section-cp .container-inline-date {
   background: transparent;
+  clear: both;
+  }
+
+.section-cp fieldset {
   border: none;
+  border-bottom: 1px solid #ccc;
   }
 
 .section-cp label.option {
@@ -59,3 +78,12 @@
 	-moz-border-right-colors: #f9f9f9 #ABABAB;
 	-moz-border-bottom-colors: #f9f9f9 #CECECE;
 	}
+
+.ctools-use-modal-processed .buttons	{
+  text-align: right;
+  margin-top: 30px;
+  }
+
+a.close-this {
+  display:block;
+  }
