theming to ctools settings

--- a/sites/all/themes/scholar_base/modal.css
+++ b/sites/all/themes/scholar_base/modal.css
@@ -13,10 +13,12 @@ div.ctools-modal-content {
   margin: 0;
   border: none;
   text-align: left;
+  background: #fff;
   }
 
 #modal-content {
   border: none;
+  background: #fff;
   }
 
 
@@ -29,6 +31,7 @@ div.ctools-modal-content .modal-title {
 }
 
 div.ctools-modal-content .modal-header {
+  background-color: #fff;
   padding: 0 1em;
   }
 
