theming to ctools settings

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -48,12 +48,17 @@
   margin-bottom: 3px;
   }
 
-.section-cp fieldset legend {
+.section-cp fieldset legend, h3#modal-title {
 	font-weight: bold;
 	color:#425e69;
 	font-size: 1.2em;
 	float: left;
 	}
+
+h3#modal-title {
+  float: none;
+  margin-bottom: 1.5em;
+  }
 
 .section-cp div.fieldset, .section-cp fieldset, .section-cp .container-inline-date {
   background: transparent;
